--- a/CHANGES
+++ b/CHANGES
@@ -50,7 +50,7 @@ PyX
     - axis.maxworse
     - axis interface
   - text module:
-    - reset() method for the texrunner (done except for the documentation)
+    - reset() method for the texrunner
     - automatic restart of a TeX instance with the same preamble (preamble changes are not possible)
     - texmessage.loadfd for accepting font description loading
     - don't bail out on width_index == 0, but mark character invalid instead
