fix tex/text changes
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1060 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -58,9 +58,8 @@ PyX
     - dvicopy flag
     - support for specials; pyxgraphics flag
     - support psfonts.map: font names, font encodings
-  - tex module:
     - bugfix \def\ProcessPyXBox -> \long\def\ProcessPyXBox
-    - copy lfs handling from text module (share the same source???)
+    - improved lfs handling
   - data module:
     - full documentation via doc strings
   - connector module:
