fix pyx.def hack occuring whenever \ProcessOptions* was used by a package
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1066 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,8 @@ PyX
   bug fixes:
   - canvas module:
     - "in" to "inch" in paperformats
+  - text module:
+    - fix pyx.def hack occuring whenever \ProcessOptions* was used by a package
 
 0.4 (2003/08/22):
   - graph module:
