implement different file formats for Python version of module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1067 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,8 @@ PyX
     - "in" to "inch" in paperformats
   - text module:
     - fix pyx.def hack occuring whenever \ProcessOptions* was used by a package
+  - pykpathsea module:
+    - implement different file formats for Python version of module
 
 0.4 (2003/08/22):
   - graph module:
