added connector in __init__
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1070 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,8 @@ PyX
     - fix pyx.def hack occuring whenever \ProcessOptions* was used by a package
   - pykpathsea module:
     - implement different file formats for Python version of module
+  - __init__.py:
+    - added "connector" to __all__
 
 0.4 (2003/08/22):
   - graph module:
