real is readable test for lfs files and pyx.def
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1082 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 PyX
 
 0.5 (????/??/??):
+  - text module:
+    - improved is readable test for lfs files and pyx.def file
   TODO:
   - graph module
     - another (the last?!) axis redesign: axispos -> class of its own; remove axis.axiscanvas
