added mathtree bug
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1084 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,8 @@ PyX
     - multiple radii: documentation
   - bbox module:
      - __iadd__ and inplace enlarge, transform,...
+  - mathtree module:
+     - bug: -x**2 should be negative
 
 0.4.1 (2003/09/17):
   - canvas module:
