- allow customization of the extension modules built (via setup.cfg) - disable building pykpathsea module by default
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1085 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 PyX
 
 0.5 (????/??/??):
+  - setup.py:
+    - allow customization of the extension modules built (via setup.cfg)
+    - disable building pykpathsea module by default
   - text module:
     - improved is readable test for lfs files and pyx.def file
   TODO:
