--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -38,7 +38,7 @@ horizontal alignment: \texttt{l} for left, \texttt{c} for center
 \texttt{r} for right.\\
 \texttt{clip=1} & Clip to bounding box of EPS file?\\
 \texttt{showbbox=0} & Stroke bounding box of EPS file?\\
-\texttt{translatebox=1} & Use lower left corner of bounding box of EPS
+\texttt{translatebbox=1} & Use lower left corner of bounding box of EPS
 file? Set to $0$ with care.\\
 \texttt{bbox=None} & If given, use \texttt{bbox} instance instead of
 bounding box of EPS file.
