more detailed instruction of install process
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1095 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -4,8 +4,7 @@ PyX
   - setup.py:
     - allow customization of the extension modules built (via setup.cfg)
     - disable building pykpathsea module by default
-    TODO:
-    - description in INSTALL
+    - more detailed description of install process in INSTALL
   - text module:
     - improved is-readable test for lfs files and pyx.def file
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
