--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,11 @@
 PyX
 
 0.5 (????/??/??):
-  - setup.py:
+  - setup.py and distribution:
     - allow customization of the extension modules built (via setup.cfg)
     - disable building pykpathsea module by default
     - more detailed description of install process in INSTALL
+    - include example data files in distribution
   - text module:
     - improved is-readable test for lfs files and pyx.def file
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
