--- a/CHANGES
+++ b/CHANGES
@@ -5,10 +5,11 @@ PyX
     - allow customization of the extension modules built (via setup.cfg)
     - disable building pykpathsea module by default
     - more detailed description of install process in INSTALL
-    - include example data files in distribution
+    - include example data files in distribution (suggested by Andrea Riciputi)
   - text module:
     - improved is-readable test for lfs files and pyx.def file
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
+    - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
   - graph module:
     - removed manualpart and partitioners mix keyword (documentation already updated)
     - results of the splitting at "=" in graph.function were not stripped
