--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ PyX
     - stroke and fill now support trafos (TODO: documentation)
   TODO:
   - graph module
+    - address datavmin and datavmax
     - another (the last?!) axis redesign: axispos -> class of its own; remove axis.axiscanvas
     - do not include unneeded line segments when the axis range is set manually
     - allow for an iteration of a graph style, when it is used several times
@@ -35,6 +36,7 @@ PyX
   - path module:
     - reverse needs to be fixed
   - text module:
+    - There is a maximal number of fonts which can be handled by the dvi subsystem. This is bad design and additionally, this small default number of fonts can easily be reached!
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - SlantFont & Co support
     - dvicopy: stdout handling
