add initial (preliminary) support for configuration files
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1103 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,8 @@ PyX
     - rect style (and errorbars?) should use clipping (TODO: should they or do the now?)
   - canvas module:
     - stroke and fill now support trafos (TODO: documentation)
+  - config module:
+    - new module for loading PyX configuration information
   TODO:
   - graph module
     - address datavmin and datavmax
