automatically import main modules into pyx namespace
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1104 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,9 @@ PyX
     - stroke and fill now support trafos (TODO: documentation)
   - config module:
     - new module for loading PyX configuration information
+  - pyx module:
+    - automatically import main modules into pyx namespace as suggested by Fernando 
+      Perez <fperez at colorado dot edu>
   TODO:
   - graph module
     - address datavmin and datavmax
