remove e-mail address
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1106 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -20,7 +20,7 @@ PyX
     - new module for loading PyX configuration information
   - pyx module:
     - automatically import main modules into pyx namespace as suggested by Fernando 
-      Perez <fperez at colorado dot edu>
+      Perez.
   TODO:
   - graph module
     - address datavmin and datavmax
