--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,8 @@ PyX
     - improved is-readable test for lfs files and pyx.def file
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
     - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
+    - showwaitfortex implemented following a suggestion by Fernando Perez
+      (waitfortex is increased to 60 seconds now)
   - graph module:
     - removed manualpart and partitioners mix keyword (documentation already updated)
     - results of the splitting at "=" in graph.function were not stripped
