user manual -> reference manual
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1112 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \usepackage{units}
 \hypersetup{
-   pdftitle={PyX User Manual},
+   pdftitle={PyX Reference Manual},
    pdfauthor={Jörg Lehmann, André Wobst},
    colorlinks={true}
 }
@@ -13,9 +13,8 @@
 \setlength{\parindent}{0pt}
 \begin{document}
 \subject{\href{http://pyx.sourceforge.net/}{\url{http://pyx.sourceforge.net/}}}
-\title{\PyX{} 
-\input pyxversion.tex
-\\User Manual}
+\title{\PyX{} \input pyxversion.tex\\
+Reference Manual}
 \author{J\"org Lehmann \href{mailto:joergl@users.sourceforge.net}{\url{<joergl@users.sourceforge.net>}}\and
 Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sourceforge.net>}}}
 \maketitle
