--- a/CHANGES
+++ b/CHANGES
@@ -10,10 +10,12 @@ PyX
   - text module:
     - improved is-readable test for lfs files and pyx.def file
     - explicitly quit (La)TeX in cleantmp (helps when quitting with <Ctrl>C)
-    - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
     - showwaitfortex implemented following a suggestion by Fernando Perez
       (waitfortex is increased to 60 seconds now)
     - support of TeX extention --ipc for reading dvi results while TeX keeps running
+    - configurable font mapping files (via pyxrc or parameter of the texrunner constructor)
+    - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
+    - fix: print warning at syntax errors in font mapping file and continue (cf. bug #795271)
   - graph module:
     - removed manualpart and partitioners mix keyword (documentation already updated)
     - results of the splitting at "=" in graph.function were not stripped
