--- a/manual/text.tex
+++ b/manual/text.tex
@@ -35,8 +35,10 @@ keyword&description\\
 \texttt{docclass}&\LaTeX{} document class; default is \texttt{"article"}\\
 \texttt{docopt}&specifies options for the document class; default is \texttt{None}\\
 \texttt{usefiles}$^1$&access to \TeX/\LaTeX{} jobname files; default: \texttt{None}; example: \texttt{("spam.aux", "eggs.log")}\\
+\texttt{fontmaps}&whitespace separated names of font mapping files; default \texttt{"psfonts.map"}\\
 \texttt{waitfortex}&wait this number of seconds for a \TeX/\LaTeX{} response; default \texttt{60}\\
 \texttt{showwaitfortex}&show a message about waiting for \TeX/\LaTeX{} response on \texttt{strerr}; default \texttt{5}\\
+\texttt{texipc}&use the \texttt{--ipc} option of \TeX/\LaTeX{} for immediate dvi-output access (boolean); check the output of \texttt{tex --help} if this option is available in your \TeX/\LaTeX{} installation; default \texttt{0}\\
 \texttt{texdebug}&filename to store \TeX/\LaTeX{} commands; default \texttt{None}\\
 \texttt{dvidebug}&dvi debug messages like \texttt{dvitype} (boolean); default \texttt{0}\\
 \texttt{errordebug}&verbose level of \TeX/\LaTeX{} error messages; valid values are \texttt{0}, \texttt{1} (default), \texttt{2}\\
