remove limitation on number of fonts in dvi file
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1116 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ PyX
     - markers to get access to positions within TeX expressions
     - fix: allow for e-tex in texmessage.start (reported by Andrea Riciputi)
     - fix: print warning at syntax errors in font mapping file and continue (cf. bug #795271)
+    - remove limitation on number of fonts in dvi file
   - graph module:
     - removed manualpart and partitioners mix keyword (documentation already updated)
     - results of the splitting at "=" in graph.function were not stripped
