uppercase version of a4, a3, ... paperformats
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1125 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ PyX
     - skip title=None in key (cf. bug #821284), properly align a single key entry
   - canvas module:
     - stroke and fill now support trafos (TODO: documentation)
+    - uppercase version of a4, a3, ... paperformats
   - config module:
     - new module for loading PyX configuration information
   - pyx module:
